--- a/spec/fixtures/screening_lists/isn/results.yaml
+++ b/spec/fixtures/screening_lists/isn/results.yaml
@@ -4,8 +4,11 @@
   :start_date: '2008-07-08'
   :end_date: 
   :id: 66f288a3f90da32a029c4a46b6d7123ec42db4c3
-  :source: ISN
+  :source: &1
+    :full_name: Nonproliferation Sanctions (ISN) - State Department
+    :code: ISN
   :source_list_url: http://www.state.gov/t/isn/c15231.htm
+  :source_information_url: http://www.state.gov/t/isn/c15231.htm
   :programs:
   - E.O. 13328 - Iran
 - :name: Aerospace Industries Organization (AIO)
@@ -13,8 +16,9 @@
   :start_date: '2005-06-28'
   :end_date: 
   :id: 96d5a86319756c3a7ce3819d208e636bd59b897e
-  :source: ISN
+  :source: *1
   :source_list_url: http://www.state.gov/t/isn/c15231.htm
+  :source_information_url: http://www.state.gov/t/isn/c15231.htm
   :programs:
   - E.O. 13328 - Iran
 - :name: Aerospace Logistics Services
@@ -22,8 +26,9 @@
   :start_date: '2007-04-17'
   :end_date: 
   :id: c145f79067e3d8ad06d859d9042f87963d373925
-  :source: ISN
+  :source: *1
   :source_list_url: http://www.state.gov/t/isn/c15231.htm
+  :source_information_url: http://www.state.gov/t/isn/c15231.htm
   :programs:
   - INKSNA
   - ISNA
@@ -32,8 +37,9 @@
   :start_date: '2007-01-09'
   :end_date: 
   :id: 3959a59f96c0716f6053f9bc9914c0fda915a8e1
-  :source: ISN
+  :source: *1
   :source_list_url: http://www.state.gov/t/isn/c15231.htm
+  :source_information_url: http://www.state.gov/t/isn/c15231.htm
   :programs:
   - E.O. 13328 - Iran
 - :name: Ahmad Vahid Dastjerdi
@@ -41,7 +47,8 @@
   :start_date: '2007-10-25'
   :end_date: 
   :id: 93f693f4195d02dc7e8f5cc861ca51512287f2fe
-  :source: ISN
+  :source: *1
   :source_list_url: http://www.state.gov/t/isn/c15231.htm
+  :source_information_url: http://www.state.gov/t/isn/c15231.htm
   :programs:
   - E.O. 13328 - Iran
