--- a/spec/fixtures/trade_events/ustda/expected_ustda_events.yaml
+++ b/spec/fixtures/trade_events/ustda/expected_ustda_events.yaml
@@ -21,7 +21,7 @@
   :start_date: '2014-06-23'
   :end_date: '2014-07-03'
   :cost: 60.0
-  :cost_currency: "USD"
+  :cost_currency: USD
   :registration_link: http://www.cvent.com/d/24qxnc
   :registration_title: USTDA China Shale Gas Development and Technologies Business
     Briefing
@@ -30,7 +30,7 @@
   - :country: US
     :state: DC
     :city: Washington
-    :venue: 'GreatVenue'
+    :venue: GreatVenue
   - :country: US
     :state: PA
     :city: Pittsburgh
@@ -53,6 +53,7 @@
     :person_title: Program Manager
     :phone: 703-239-7516
     :email: chinartm@experient-inc.com
+  :source: USTDA
 - :id: Vietnam Airport Development and Operations Reverse Trade Mission
   :event_name: Vietnam Airport Development and Operations Reverse Trade Mission
   :description: The U.S. Trade and Development Agency (USTDA) will host a delegation
@@ -104,6 +105,7 @@
     :person_title: Sr. Director of Meetings & Conferences
     :phone: 202-741-1297
     :email: aj@webstergroupinc.com
+  :source: USTDA
 - :id: 'African Leaders'' Visit: Transport'
   :event_name: 'African Leaders'' Visit: Transport'
   :description: 'USTDA and the U.S. Department of Transportation will co-host the
@@ -138,6 +140,7 @@
     :person_title: Digital Media Manager
     :phone: 703-875-4357
     :email: ALVTransport@ustda.gov
+  :source: USTDA
 - :id: 'African Leaders'' Visit: Energy'
   :event_name: 'African Leaders'' Visit: Energy'
   :description: 'USTDA and the U.S. Department of Energy will co-host the African
@@ -173,6 +176,7 @@
     :person_title: Digital Media Manager
     :phone: 703-875-4357
     :email: ALVEnergy@ustda.gov
+  :source: USTDA
 - :id: Sub-Saharan Africa Light Aircraft and Helicopter Reverse Trade Mission
   :event_name: Sub-Saharan Africa Light Aircraft and Helicopter Reverse Trade Mission
   :description: The U.S. Trade and Development Agency (USTDA) is sponsoring a Sub-Saharan
@@ -183,7 +187,7 @@
     U.S. industry experts and suppliers of light aircraft and helicopters. Futron
     Corporation is organizing the RTM on behalf of USTDA. For more information on
     the event, please contact Program Manager, Ian Christensen, by e-mail at ichristensen@futron.com
-    or by phone at 301-280-2645.
+    or by phone at 301-280-2645. international
   :start_date: '2014-10-18'
   :end_date: '2014-10-30'
   :cost: 
@@ -218,3 +222,4 @@
     :person_title: Program Manager
     :phone: 301-280-2645
     :email: ichristensen@futron.com
+  :source: USTDA
