--- a/spec/fixtures/tariff_rates/australia/results.yaml
+++ b/spec/fixtures/tariff_rates/australia/results.yaml
@@ -1,8 +1,8 @@
 ---
 - :source_id: "439058"
-  :tariff_line: "1011000"
+  :tariff_line: "01011000"
   :description: "Live purebred breeding horses and asses"
-  :hs_6: "10110"
+  :hs_6: "010110"
   :sector_code: "15"
   :base_rate: "0"
   :base_rate_alt: "null"
@@ -30,7 +30,95 @@
   :link_url: "null"
   :quota_name: "null"
   :industry: "Agricultural"
-  :annual_rates: {"y2012": "10", "y2013": "20", "y2014": "30"}
-  :alt_annual_rates: {"alt_2012": "1", "alt_2013": "2", "alt_2014": "3"}
+  :annual_rates:
+      "y2012": "10"
+      "y2013": "20"
+      "y2014": "30"
+  :alt_annual_rates:
+      "alt_2012": "1"
+      "alt_2013": "2"
+      "alt_2014": "3"
+  :countries: "US,AU"
+  :source: "AUSTRALIA"
+- :source_id: "439227"
+  :tariff_line: "0102102000"
+  :description: "Beef cattle"
+  :hs_6: "010210"
+  :sector_code: "15"
+  :base_rate: "89.1"
+  :base_rate_alt: "null"
+  :final_year: "2012"
+  :tariff_lines_per_6_digit: "3"
+  :tariff_rate_quota: "null"
+  :tariff_rate_quota_note: "For more information, please see the U.S. Department of Agriculture's Agricultural Tariff Tracker."
+  :tariff_eliminated: "true"
+  :product_type_id: "2"
+  :pending_data: "false"
+  :ag_id: "166"
+  :partner_name: "US"
+  :reporter_name: "KP"
+  :staging_basket: "Immediate"
+  :staging_basket_id: "6"
+  :num_mar_columns: "10"
+  :partner_start_year: "null"
+  :reporter_start_year: "2012"
+  :partner_agreement_name: "US"
+  :reporter_agreement_name: "KP"
+  :partner_agreement_approved: "null"
+  :reporter_agreement_approved: "true"
+  :rule_text: "A change to heading 01.01 through 01.06 from any other chapter."
+  :link_text: "null"
+  :link_url: "null"
+  :quota_name: "null"
+  :industry: "Agricultural"
+  :annual_rates: 
+     y2012: "null"
+     y2013: "null"
+     y2014: "null"
+  :alt_annual_rates: 
+     alt_2012: "null"
+     alt_2013: "null"
+     alt_2014: "null"
+  :countries: "US,AU"
+  :source: "AUSTRALIA"
+- :source_id: "441638"
+  :tariff_line: "02050000"
+  :description: "Meat of horses, asses, mules or hinnies, fresh, chilled or frozen"
+  :hs_6: "020500"
+  :sector_code: "17"
+  :base_rate: "0"
+  :base_rate_alt: "null"
+  :final_year: "2012"
+  :tariff_lines_per_6_digit: "1"
+  :tariff_rate_quota: "null"
+  :tariff_rate_quota_note: "For more information, please see the U.S. Department of Agriculture's Agricultural Tariff Tracker."
+  :tariff_eliminated: "true"
+  :product_type_id: "2"
+  :pending_data: "false"
+  :ag_id: "2577"
+  :partner_name: "KP"
+  :reporter_name: "US"
+  :staging_basket: "Immediate"
+  :staging_basket_id: "6"
+  :num_mar_columns: "10"
+  :partner_start_year: "2012"
+  :reporter_start_year: "null"
+  :partner_agreement_name: "KP"
+  :reporter_agreement_name: "US"
+  :partner_agreement_approved: "true"
+  :reporter_agreement_approved: "null"
+  :rule_text: "A change to heading 02.01 through 02.10 from any other chapter except from fowls of the species Gallus domesticus (chickens) of heading 01.05."
+  :link_text: "null"
+  :link_url: "null"
+  :quota_name: "null"
+  :industry: "Agricultural"
+  :annual_rates:
+    y2012: "null"
+    y2013: "null"
+    y2014: "null"
+  :alt_annual_rates:
+    alt_2012: "null"
+    alt_2013: "null"
+    alt_2014: "null"
   :countries: "US,AU"
   :source: "AUSTRALIA"
