--- a/spec/fixtures/screening_lists/dpl/results.yaml
+++ b/spec/fixtures/screening_lists/dpl/results.yaml
@@ -7,7 +7,7 @@
   :federal_register_notice: 
   :id: 7509f1f94933abd8d2367a8d89375d5fe26c352e
   :source: &1
-    :full_name: Denied Persons List (DPL) – Bureau of Industry and Security
+    :full_name: Denied Persons List (DPL) - Bureau of Industry and Security
     :code: DPL
   :source_list_url: http://www.bis.doc.gov/index.php/the-denied-persons-list
   :source_information_url: http://www.bis.doc.gov/index.php/policy-guidance/lists-of-parties-of-concern/denied-persons-list
