Remove and decode HTML from within sanitize_entry.

--- a/spec/fixtures/trade_events/sba/imported_batch_2.yaml
+++ b/spec/fixtures/trade_events/sba/imported_batch_2.yaml
@@ -25,7 +25,7 @@
   :end_date: '2014-06-17'
   :end_time: '18:00'
   :id: 765f3c8a6b778e108e12151ab1c006b2ffe56707
-- :address: 600 Forbes Avenue<br />Power Center Ballroom
+- :address: 600 Forbes Avenue Power Center Ballroom
   :city: Pittsburgh
   :cost: '295.00'
   :country: US
@@ -34,7 +34,7 @@
     on every export. •You will have a better understanding of the regulations and
     specific tools & instructions on how to ensure you have a secure and compliant
     department & company.'
-  :event_name: Export Compliance &amp; Documentation Training
+  :event_name: Export Compliance & Documentation Training
   :event_type: Resource Partner
   :industries: []
   :registration_link: http://www.duq.edu/sbdc/
@@ -96,7 +96,7 @@
   :industries: []
   :registration_link: 
   :state: NY
-  :venue: CCC&#039;s Academic &amp; Workforce Development Center
+  :venue: CCC's Academic & Workforce Development Center
   :source: SBA
   :contacts:
   - :email: sbdc@corning-cc.edu
@@ -144,7 +144,7 @@
     8:15 a.m. Opening Session 9:15 a.m. General Session 10:30 a.m. Breakout Sessions
     12:15 p.m. Small Business Awards & Closing Session Conference only: $35 Conference
     & Awards Luncheon: $65 To register by phone please call 213-580-7548.'
-  :event_name: '2014 SBA Small Business Awards &amp; Conference #thenextbigthing'
+  :event_name: '2014 SBA Small Business Awards & Conference #thenextbigthing'
   :event_type: SBA Sponsored
   :industries: []
   :registration_link: http://events.lachamber.com/sbaweb/events/events.asp?&id=76086&wpid=-101&details=True&date=&cale_id=5206&newsession=TRUE&sid=122646944
@@ -162,7 +162,7 @@
   :end_date: '2014-06-19'
   :end_time: '13:30'
   :id: ff38ea7c23e134ca62faa5134f743b705403ff9a
-- :address: 600 Forbes Avenue<br />Power Center Ballroom
+- :address: 600 Forbes Avenue Power Center Ballroom
   :city: Pittsburgh
   :cost: '195.00'
   :country: US
@@ -170,7 +170,7 @@
     your risk and exposure •You will know the specific strategies and tools to use
     during critical negotiations •You will be in the driver’s seat to properly structure
     your sales terms and financing options'
-  :event_name: Letters of Credit &amp; International Banking
+  :event_name: Letters of Credit & International Banking
   :event_type: Resource Partner
   :industries: []
   :registration_link: http://www.duq.edu/sbdc/
