--- a/spec/fixtures/trade_events/sba/imported_batch_1.yaml
+++ b/spec/fixtures/trade_events/sba/imported_batch_1.yaml
@@ -25,7 +25,7 @@
   :end_date: '2014-01-08'
   :end_time: '15:31'
   :id: e78c5a7eeecccd3c9f240d4703b3af8bab4450f5
-- :address: Fourth and Battery Building<br />2401 4th Avenue, Suite 450
+- :address: Fourth and Battery Building 2401 4th Avenue, Suite 450
   :city: Seattle
   :cost: '0.00'
   :country: US
@@ -78,7 +78,7 @@
   :end_date: '2013-02-01'
   :end_time: 
   :id: fb7d16d26e16cbc5b66b67b96e626ea63ffdd6c9
-- :address: Fourth and Battery Building<br />2401 4th Avenue, Suite 450
+- :address: Fourth and Battery Building 2401 4th Avenue, Suite 450
   :city: MaxiMUS
   :cost: '0.00'
   :country: US
@@ -131,7 +131,7 @@
   :end_date: '2013-03-01'
   :end_time: 
   :id: b3f46c97375edea241c4ff98599b8113bd3157f7
-- :address: Fourth and Battery Building<br />2401 4th Avenue, Suite 450
+- :address: Fourth and Battery Building 2401 4th Avenue, Suite 450
   :city: Seattle
   :cost: '0.00'
   :country: US
@@ -184,7 +184,7 @@
   :end_date: '2013-04-01'
   :end_time: 
   :id: 387844f41385ae2dc5ac025d02c18d8052322fde
-- :address: Fourth and Battery Building<br />2401 4th Avenue, Suite 450
+- :address: Fourth and Battery Building 2401 4th Avenue, Suite 450
   :city: Seattle
   :cost: '0.00'
   :country: US
